# tutorial-starting-point

./: CMakeLists.txt  CMakePresets.json  vcpkg.json
.github/: renovate.json
cmake/: deps.cmake
scripts/: setup.ps1
src/: main.cpp
